Modularized the topic tagger so it can be included in any form, fixed logic, eliminated whitespace on client and server side

--- a/app/assets/stylesheets/partials/_core_objects.css.scss
+++ b/app/assets/stylesheets/partials/_core_objects.css.scss
@@ -28,23 +28,10 @@
 
 form.core_object {
   $form-width: 500px;
+  $tag-width: 130px;
   position: relative;
   h3 {
 
-  }
-  .formTaggable {
-    position: relative;
-    .tagDisplay {
-      position: absolute;
-      left: $form-width - 130;
-      top: 0px;
-
-      input {
-        background: #F2F8E4;
-        z-index: 130;
-        width: 120px;
-      }
-    }
   }
   .help {
     font-size: 12px;
@@ -77,9 +64,21 @@ form.core_object {
     }
     textarea {
       height: 175px;
+      width: $form-width - ($tag-width + 10);
     }
     &.required label {
       color: #CD070E;
+    }
+    .tagDisplay {
+      position: absolute;
+      left: $form-width - $tag-width;
+      top: 0px;
+
+      input {
+        background: #F2F8E4;
+        z-index: 130;
+        width: $tag-width;
+      }
     }
   }
   .group {
